@@ -2,7 +2,6 @@
   "name": "jambagecom/static-info-tables-es",
   "type": "typo3-cms-extension",
   "description": "Spanish (es) language pack for the Static Info Tables providing localized names for countries, currencies and so on.",
-  "version": "6.4.1",
   "license": "GPL-2.0+",
   "repositories": [
     {
@@ -22,7 +21,7 @@
     {
       "name": "Franz Holzinger",
       "role": "Developer",
-      "homepage": "http://ttproducts.de"
+      "homepage": "https://ttproducts.de"
     }
   ],
   "replace": {
@@ -30,23 +29,13 @@
     "typo3-ter/static-info-tables-es": "self.version"
   },
   "require": {
-    "php": ">=5.3.3",
-    "typo3/cms-core": ">=6.1,<9.0",
-    "sjbr/static-info-tables": ">=6.4,<7.0"
-  },
-  "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin",
-    "preferred-install": {
-      "typo3/cms": "source",
-      "typo3/cms-core": "source",
-      "*": "dist"
-    }
+    "php": ">=5.6",
+    "typo3/cms": ">=7.6,<9.0",
+    "sjbr/static-info-tables": "^6.5"
   },
   "extra": {
     "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web"
+      "extension-key": "static_info_tables_es"
     }
   }
 }
