@@ -5,7 +5,7 @@ $EM_CONF[$_EXTKEY] = Array (
 	'description' => 'Spanish (es) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '6.4.2',
+	'version' => '6.4.3',
 	'priority' => '',
 	'loadOrder' => '',
 	'module' => '',
@@ -22,13 +22,12 @@ $EM_CONF[$_EXTKEY] = Array (
 	'CGLcompliance_note' => '',
 	'constraints' => array (
 		'depends' => array(
-			'typo3' => '6.1.0-8.99.99',
-			'static_info_tables' => '6.2.1-6.99.99',
+            'typo3' => '7.6.0-8.99.99',
+            'static_info_tables' => '6.2.1-6.99.99',
 		),
 		'conflicts' => array(
 		),
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => '',
 );
