@@ -1,3 +1,6 @@
+2018-08-06  Franz Holzinger  <franz@ttproducts.de>
+    * adaptions to composer.json
+
 2017-05-17  Franz Holzinger  <franz@ttproducts.de>
     * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json
 
